// 添加Service属性的消息会在生成接收代码封装,同时加到路由表中

struct ServerInfo{
    IP      string
    Port    int32
}

// client -> agent 客户端Ping
[AutoMsgID]
struct PingACK {
}


[AutoMsgID]
struct LoginREQ {
    Version string
	Platform string
	UID string
}


[AutoMsgID]
struct LoginACK {
	Result ResultCode
	Server ServerInfo
	GameToken string
	GameSvcID string // 选中的一台game服务器ID
}


[AutoMsgID]
struct VerifyREQ {
	GameToken string
	GameSvcID string
}


[AutoMsgID]
struct VerifyACK {
	Result ResultCode
}